--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     .box {
       width: 600px;
       height: 600px;
-      background-color: lightgray;
+      background-color: rgba(164, 148, 170, 1);
       position: relative;
     }
 
