--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Experimento de la Caja de Skinner</title>
   <style>
@@ -12,12 +13,12 @@
     }
 
     .box {
-      width: 600px;
-      height: 600px;
+      width: 100vw;
+      height: 100vh;
       background-color: rgba(164, 148, 170, 1);
       position: relative;
     }
-
+    
     #food {
       font-size: 80px;
       line-height: 1;
@@ -51,11 +52,29 @@
       margin: 0 10px;
       font-size: 0;
     }
+
+    .light {
+      position: absolute;
+      top: 10px;
+      /* Cambia el valor de top */
+      left: 10px;
+      /* Cambia el valor de left */
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      background-color: transparent;
+      box-shadow: 0 0 50px 50px red;
+      transform: translate(-50%, -50%);
+      z-index: 1;
+      display: none;
+    }
   </style>
 </head>
+
 <body>
   <div class="box">
     <div id="food"></div>
+    <div id="light" class="light"></div> <!-- Agrega este elemento para representar la luz -->
     <div id="rat">&#x1F42D;</div>
     <div class="buttons">
       <button id="foodButton" class="button"></button>
@@ -65,4 +84,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
