--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       height: 100px;
       border-radius: 50%;
       background-color: transparent;
-      box-shadow: 0 0 50px 50px rgb(251, 255, 0);
+      box-shadow: 0 0 50px 50px red;
       transform: translate(-50%, -50%);
       z-index: 1;
       display: none;
@@ -76,7 +76,6 @@
     <div class="buttons">
       <button id="foodButton" class="button"></button>
       <button id="shockButton" class="button"></button>
-      <button id="dumpButton" class="button"></button>
     </div>
   </div>
 
